fix(footer): Align css

--- a/frontend/scss/_footer.scss
+++ b/frontend/scss/_footer.scss
@@ -62,7 +62,8 @@ footer {
       }
       .footer-captions
       {
-        font-size: 10px; color: grey;
+        font-size: 10px; 
+        color: grey;
       }
     }
 
